Fix the compilation error when cherry-picking cdec98a